--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@ public class DB : DbContext
                 <div class="step-number">9.2</div>
                 <h2 class="step-title">Login View</h2>
             </div>
-            <p class="px-4 py-2">Views/Account/SignUp.cshtml</p>
+            <p class="px-4 py-2">Views/Account/Login.cshtml</p>
             <div class="step-content">
                 <p>Base layout structure with essential dependencies:</p>
                 <div class="position-relative">
@@ -887,7 +887,7 @@ public class DB : DbContext
                 <div class="step-number">9.3</div>
                 <h2 class="step-title">Admin Panel (GetData) View</h2>
             </div>
-            <p class="px-4 py-2">Views/Account/SignUp.cshtml</p>
+            <p class="px-4 py-2">Views/AdminPanel/GetData.cshtml</p>
             <div class="step-content">
                 <p>Base layout structure with essential dependencies:</p>
                 <div class="position-relative">
@@ -1225,7 +1225,7 @@ a {
                 <div class="step-number">10</div>
                 <h2 class="step-title">Download Source Code</h2>
             </div>
-                <div class="mt-4 p-4 bg-light rounded text-center">
+                <div class="mt-4 p-4 rounded text-center">
                     <h4 class="mb-3">Complete & Functional Login System</h4>
                     <p class="lead">You now have a fully implemented authentication system with admin panel!</p>
                     <a href="./WebAuthentication_UsingSession.zip" class="btn btn-primary mt-2" id="downloadBtn">Download Source Code</a>
