--- a/index.html
+++ b/index.html
@@ -398,11 +398,9 @@ Microsoft.EntityFrameworkCore.Tools</code></pre>
             <div class="step-content">
                 <p>Configure your database connection in appsettings.json:</p>
                 <div class="position-relative">
-                    <pre><code>{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SERVER;Database=LoginSystem_db;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
-  }
-}</code></pre>
+                    <pre><code>"ConnectionStrings": {
+                            "DefaultConnection": "Server=LAPTOP-L6QNGMK1\\SQLEXPRESS06;Database=Chocolate_db_CRUD;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+                        },</code></pre>
                     <button class="copy-btn">Copy</button>
                 </div>
                 <p class="mt-3"><strong>Security Note:</strong> Always store production credentials in secure environment variables.</p>
